# szbdc-tools

./: Cargo.toml  LICENSE  README.md
crates/tools_core/: Cargo.toml
crates/tools_core/.cargo/: config.toml
crates/tools_core/src/domain/: repository.rs
crates/tools_core/src/infra/: barcode.rs  mod.rs  ntag213.rs
crates/tools_core/src/infra/nfc/: mod.rs  ntag213.rs
crates/tools_core/src/infra/repository/: sqlite.rs
tauri-app/repository/: package.json  pnpm-lock.yaml
tauri-app/repository/src/: App.vue
tauri-app/repository/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
tauri-app/repository/src-tauri/icons/: icon.icns
tauri-app/repository/src-tauri/src/: fumo.rs  lib.rs  main.rs
tauri-app/repository/src/components/: AddModal.vue  Barcode.vue  DataTable.vue  Header.vue
tauri-app/repository/src/components/plugin/: fumo.ts  interface.ts  sample.ts
