[package]
name = "tools_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "^0.1"
chrono = "^0.4"
hex = "^0.4"
log = "0.4.27"
nfc1 = { version = "^0.6", default-features = false }
nfc1-sys = { version = "^0.3", default-features = false}
rusqlite = "^0.36"
rxing = "^0.7"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["rt-multi-thread", "sync"] }
uuid = { version = "^1.17", features = ["v4"] }
